	* Level 4 forge (MRO Lvl 4 Forging Quest) - 1% - resources only from MRO Official
	  guide book so, probably unofficial

TODO:
	* Redo all NPCs to work with BABY CLASSES.
		(Super Baby + CART, Baby Merchant + Cart, Baby Blacksmith + Cart, Baby alchemist +Cart = client crash)
		It's not a script, but the server issue.
		

== Changelog ==

Date		Added
======
09/04
	* Wizards Job Quest: Replcaced 2 Hodes with 2 Horongs (according to the official stuff) [Lupus]
	* Removed duplicate Lighthalzen dungeons/fields warps, thanks to our super moderator, T3H
	  Manipulator! [DracoRPG]
	* Updated mob spawns with Dr. Evil ones, they should all be correct and up-to-date,
	  including Lighthalzen and Juperos dungeons. If something goes wrong, then let's revert,
	  but I think there won't be any problem (Frugal advised me to use them, and Frugal is a
	  good spawn expert IMHO :p) [DracoRPG]
08/31
	* Some fixes to the refine npc. [Skotlex]
	* Fixed Lighthalzen field <-> Lightalzen city warps, thanks to Poki#3 [DracoRPG]
	* Moved Tao Gunka to Comodo West Cave (made Megalithes as his slaves),
		Placed Lady Tany in the 2F of Ayothaya Dungeon [Lupus]
08/29
	* Added Dead Branch (and Bloody Branch) quest by GM-Yevon [Lupus]
	* Fixed Adoption.txt [Lupus]
08/28
	* Added a Taekwon NPC (to get Taekwon Job). It's temp tough [Lupus]
08/27
	* Splitted anti-taekwon protection from double-adopt protection in adoption.txt, should
	  allow to see more easily what is the problem [DracoRPG]
	* Updated Is_Taekwon_Class with Job_Star_Gladiator2 [DracoRPG]
08/26
	* Reupdated the refine npc to not use recursive functions. [Skotlex]
	* Fixed Wool Hat quest items. Thanx to the__android [Lupus]
08/25
	* Updated Louyang spawns according to ep 8.5 by MasterOfMuppets [Lupus]
	* Updated Lighthalzen Field 03 spawns by MasterOfMuppets [Lupus]
	* Fixed THQ Shop menu prices, thx to NeatElves [Lupus]
	* Added Hugel Mob Spawns by MasterOfMuppets [Lupus]
08/24
	* Updated refine.txt from Freya [Lupus]
08/23