@@ -1,0 +1,67 @@
+//===== eAthena Script =======================================
+//= Quest for Fashion Glasses (Daily Job Quest)
+//===== By: ==================================================
+//= ?
+//===== Current Version: =====================================
+//= Any
+//===== Compatible With: =====================================
+//= eAthena
+//===== Description: =========================================
+//= Quest for Fashion Glasses
+//===== Additional Comments: =================================
+//= 1.0 Fully Working [Lupus]
+//============================================================
+
+izlude.gat,135,96,5	script	Fashion Glasses Quest	76,{
+	mes "[Fashionable Glasses Quest]"; 
+	mes "Hi, today's quest is...."; 
+	mes "Ah, the ^CC6633Fashionable Glasses^000000 Quest!"; 
+	next; 
+	menu "Requirements",M_INFO,"Make Item",-,"Cancel",M_CANCEL; 
+
+	mes "[Fashionable Glasses Quest]";
+	mes "Good good, let me just check"; 
+	if(countitem(2271)<1 || countitem(975)<1) goto M_NOITEMS;
+
+	next;
+	mes "[Fashionable Glasses Quest]";
+	mes "Give me a second.....";
+	next;
+	delitem 2271,1;
+	delitem 975,1;
+	getitem 5047,1;
+	mes "[Fashionable Glasses Quest]";
+	mes "Ok done!";
+	close;
+
+M_NOITEMS:
+	mes "[Fashionable Glasses Quest]";
+	mes "You don't have the requirements.";
+	mes "Please come back another time...";
+	close;
+
+M_INFO: 
+	mes "Ok all you have to do is collect"; 
+	mes "^CC66331 Jack'a Dandy^000000"; 
+	mes "and ^CC66331 Scalet Dyestuff^000000.";
+	next;
+	menu "Accept",-,"Leave",M_LEAVE;
+
+	mes "When you are done, bring the items to me,";
+	mes "Ok good luck finding those items.";
+	close;
+
+M_LEAVE:
+	mes "[Fashionable Glasses Quest]";
+	mes "Maybe another time?";
+	close;
+
+M_CANCEL:
+	mes "[Fashionable Glasses Quest]";
+	mes "Aw, what a shame";
+	mes "Giving up already?";
+	mes "Oh well maybe you will";
+	mes "participate in tommorow's";
+	mes "quest.";
+	close;
+}
