@@ -29,6 +29,7 @@ TODO:
 Date		Added
 ======
 09/04
+	* Moved Fashion Quest into the proper folder: custom/quests . Also optimized the script [Lupus]
 	* Wizards Job Quest: Replcaced 2 Hodes with 2 Horongs (according to the official stuff) [Lupus]
 	* Removed duplicate Lighthalzen dungeons/fields warps, thanks to our super moderator, T3H
 	  Manipulator! [DracoRPG]
